changed mobile menu to postion fixed to eliminate unessasary body overflow

--- a/main.css
+++ b/main.css
@@ -138,7 +138,7 @@ body {
 .nav-bar {
   width: 100%;
   height: 400px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   display: -webkit-box;
@@ -227,7 +227,7 @@ body {
           box-sizing: border-box;
 }
 
-body {
+body, html {
   width: 100%;
   height: 100vh;
 }
