--- a/style/components/shared-components/_header.scss
+++ b/style/components/shared-components/_header.scss
@@ -1,7 +1,7 @@
 .nav-bar{
     width: 100%;
     height: 400px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     display: flex;
